<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <LinearLayout android:id="@+id/LinearLayout1" android:gravity="center|fill_horizontal|center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center|left" android:text="@string/login_prompt" android:layout_height="wrap_content" android:id="@+id/TextView01" android:layout_width="wrap_content"></TextView>
        <EditText android:layout_height="wrap_content" android:inputType="textEmailAddress" android:layout_width="fill_parent" android:id="@+id/editTextLoginId">
        </EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/password_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1"></TextView>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="textPassword" android:id="@+id/editTextLoginPassword"></EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_login_text" android:id="@+id/buttonLogin"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_register_text" android:id="@+id/buttonRegister"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_help_text" android:id="@+id/buttonHelp"></Button>
    </LinearLayout>
    
</LinearLayout>
